fixed the overflow for all items and fixed the zindex for the sectoins in EmailList

--- a/src/CSS/EmailList.css
+++ b/src/CSS/EmailList.css
@@ -20,5 +20,7 @@
     display: flex;
     background-color: white;
     border-bottom: .1em solid whitesmoke;
-    z-index: 999;
+    z-index: 1000;
 }
+
+/* https://youtu.be/b7nrXjS6Dqs?t=14029 */
